Fixed withdraw button and alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,7 +43,6 @@ Body {
 
 .reward-logo-image {
   margin-right: 49px;
-  top: 10px;
   left: 24px;
   height: 44px;
   position: relative;
@@ -364,6 +363,7 @@ button.as-link {
   background-color: #f2f2f2;
   width: 97%;
   padding: 10px;
+  display: flex;
 }
 
 .amount-staked-image {
@@ -383,13 +383,13 @@ button.as-link {
 }
 
 .inliner {
-  width: 190px;
-  margin-right: 10px;
+  width: 100%;
+  margin: 1rem 0;
   display: inline-block;
 }
 
 .withdraw-button {
-  margin-top: 10px;
+
 }
 
 .launch-date {
